--- a/src/index.html
+++ b/src/index.html
@@ -114,5 +114,10 @@
       &copy;2025 ⛺ SleepOutside ⛺ WDD 330 ⛺ BYU-Idaho for BYU-Pathway
       Worldwide Online
     </footer>
+     <script type="module">
+      import Alert from './js/Alert.js';
+      const alert = new Alert('./json/alerts.json'); 
+      alert.showAlerts();
+    </script>
   </body>
 </html>
