--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -47,6 +47,6 @@
       </section>
     </main>
     <footer id="main-foot"></footer>
-    <script src="./js/product-listing.js" type="module"></script>
+    <script src="../js/product-listing.js" type="module"></script>
   </body>
 </html>
