--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -57,16 +57,16 @@
 
     <main class="divider">
       <section class="product-detail">
-        <h2>Brand Name</h2>
-        <h3 class="divider">Product</h3>
+        <h2></h2>
+        <h3 class="divider"></h3>
         <img
-          src="../images/camping-products.jpg"
-          alt="Sleep Outside Camping Products"
-          id="productImage"
+          src=""
+          alt=""
+          id=""
           class="divider"
         />
-        <p id="productPrice" class="product-card__price">$000.99</p>
-        <p id="productColor" class="product__color">Color</p>
+        <p id="productPrice" class="product-card__price"></p>
+        <p id="productColor" class="product__color"></p>
         <p id="productDesc" class="product__description">
           Description<br />10% Discount Price
         </p>
