--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -62,7 +62,7 @@
         <img
           src=""
           alt=""
-          id=""
+          id="productImage"
           class="divider"
         />
         <p id="productPrice" class="product-card__price"></p>
