--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -59,12 +59,7 @@
       <section class="product-detail">
         <h2></h2>
         <h3 class="divider"></h3>
-        <img
-          src=""
-          alt=""
-          id="productImage"
-          class="divider"
-        />
+        <img src="" alt="" id="productImage" class="divider" />
         <p id="productPrice" class="product-card__price"></p>
         <p id="productColor" class="product__color"></p>
         <p id="productDesc" class="product__description">
