--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -9,6 +9,8 @@
     <title>Sleep Outside | Checkout</title>
 
     <link rel="stylesheet" href="css/style.css" />
+    <script src="../js/main.js" type="module"></script>
+    <script src="./js/checkout.js" type="module"></script>
   </head>
 
   <body>
@@ -26,6 +28,5 @@
       const alert = new Alert('../json/alerts.json');
       alert.showAlerts();
     </script> -->
-    <script src="./js/checkout.js" type="module"></script>
   </body>
 </html>
