Corrected Search Results title and changed font-size of dialog box.

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -18,7 +18,7 @@
     <header class="divider" id="main-head"></header>
 
     <div id="modalOverlay" class="modal-overlay hide"></div>
-    <div id="removeDialog" class="modal-dialog hide" role="dialog" aria-modal="true" aria-labelledby="dialogTitle">
+    <div id="removeDialog" class="modal-dialog hide" role="dialog" aria-modal="true" aria-labelledby="RemoveFromCartMessage">
       <div id="dialog-content">
         <h3 id="dialogTitle"></h3>
         <div id="dialog-message"></div>
