--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -41,6 +41,7 @@
             <p class="cart-final">
               Final Total: <span id="cart-final">$0.00</span>
             </p>
+            <button id='clear-cart-btn'>Clear Cart</button>
           </div>
         </div>
       </section>
