npm run format and updated cart badge after clear

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,10 @@
             href="product_listing/index.html?category=sleeping-bags"
             category="sleeping-bags"
           >
-            <img src="./images/category-sleepingbags.svg" alt="Sleeping Bags icon" />
+            <img
+              src="./images/category-sleepingbags.svg"
+              alt="Sleeping Bags icon"
+            />
             <h3>Sleeping Bags</h3>
           </a>
         </div>
