--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -18,14 +18,20 @@
     <header class="divider" id="main-head"></header>
 
     <div id="modalOverlay" class="modal-overlay hide"></div>
-    <div id="removeDialog" class="modal-dialog hide" role="dialog" aria-modal="true" aria-labelledby="RemoveFromCartMessage">
+    <div
+      id="removeDialog"
+      class="modal-dialog hide"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="RemoveFromCartMessage"
+    >
       <div id="dialog-content">
         <h3 id="dialogTitle"></h3>
         <div id="dialog-message"></div>
         <div id="dialog-options"></div>
       </div>
     </div>
-    
+
     <main class="divider">
       <section class="products">
         <h2>My Cart</h2>
@@ -41,7 +47,7 @@
             <p class="cart-final">
               Final Total: <span id="cart-final">$0.00</span>
             </p>
-            <button id='clear-cart-btn'>Clear Cart</button>
+            <button id="clear-cart-btn">Clear Cart</button>
           </div>
         </div>
       </section>
