--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -18,14 +18,20 @@
     <header class="divider" id="main-head"></header>
 
     <div id="modalOverlay" class="modal-overlay hide"></div>
-    <div id="removeDialog" class="modal-dialog hide" role="dialog" aria-modal="true" aria-labelledby="RemoveFromCartMessage">
+    <div
+      id="removeDialog"
+      class="modal-dialog hide"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="RemoveFromCartMessage"
+    >
       <div id="dialog-content">
         <h3 id="dialogTitle"></h3>
         <div id="dialog-message"></div>
         <div id="dialog-options"></div>
       </div>
     </div>
-    
+
     <main class="divider">
       <section class="products">
         <h2>My Cart</h2>
