--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -17,6 +17,12 @@
   <body>
     <header class="divider" id="main-head"></header>
 
+    <div class="search-bar" id="mobile-search">
+      <label for="item-search">Search our Outdoor Listings:</label>
+      <input id="item-search" type="text" placeholder="Search Products..." />
+      <button id="search-button">Search</button>
+    </div>
+
     <div id="modalOverlay" class="modal-overlay hide"></div>
     <div
       id="removeDialog"
