--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -15,7 +15,12 @@
 
   <body>
     <header class="divider" id="main-head"></header>
-
+    <div class="search-bar" id="mobile-search">
+      <label for="item-search">Search our Outdoor Listings:</label>
+      <input id="item-search" type="text" placeholder="Search Products..." />
+      <button id="search-button">Search</button>
+    </div>
+    
     <main class="divider">
       <section class="products">
         <h2>Review & Place your Order</h2>
