--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -16,6 +16,11 @@
 
   <body>
     <header class="divider" id="main-head"></header>
+    <div class="search-bar" id="mobile-search">
+      <label for="item-search">Search our Outdoor Listings:</label>
+      <input id="item-search" type="text" placeholder="Search Products..." />
+      <button id="search-button">Search</button>
+    </div>
 
     <main class="divider">
       <section class="product-detail">
