--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="../js/main.js" type="module"></script>
     <script src="./js/checkout.js" type="module"></script>
+    <script src="../js/breadcrumb.js" type="module"></script>
   </head>
 
   <body>
