--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/style.css" />
     <script src="../js/main.js" type="module" defer></script>
     <script src="../js/product-listing.js" type="module"></script>
+    <script src="../js/breadcrumb.js" type="module"></script>
   </head>
   <body>
     <header class="divider" id="main-head">
