--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -12,6 +12,7 @@
 
     <script src="../js/main.js" type="module" defer></script>
     <script src="../js/product.js" type="module"></script>
+    <script src="../js/breadcrumb.js" type="module"></script>
   </head>
 
   <body>
