--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -12,12 +12,12 @@
 
     <script src="../js/main.js" type="module"></script>
     <script src="../js/cart.js" type="module"></script>
-    <script src="../js/breadcrumb.js" type="module"></script>
+    <script src="/js/breadcrumb.js" type="module"></script>
   </head>
 
   <body>
     <header class="divider" id="main-head"></header>
-
+    <nav id="breadcrumbs" class="breadcrumb" aria-label="Breadcrumb"></nav>
     <div id="modalOverlay" class="modal-overlay hide"></div>
     <div
       id="removeDialog"
