--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -16,7 +16,7 @@
 
   <body>
     <header class="divider" id="main-head"></header>
-
+    <nav id="breadcrumbs" class="breadcrumb" aria-label="Breadcrumb"></nav>
     <main class="divider">
       <section class="products">
         <h2>Review & Place your Order</h2>
