--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -44,6 +44,7 @@
         </a>
       </div>
     </header>
+    <nav id="breadcrumbs" class="breadcrumb" aria-label="Breadcrumb"></nav>
     <main class="divider">
       <section class="products">
         <ul class="product-list"></ul>
