--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header class="divider" id="main-head"></header>
-
+    <nav id="breadcrumbs" class="breadcrumb" aria-label="Breadcrumb"></nav>
     <main class="divider">
       <section class="product-detail">
         <h2></h2>
