--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -12,12 +12,11 @@
 
     <script src="../js/main.js" type="module"></script>
     <script src="../js/cart.js" type="module"></script>
-    <script src="/js/breadcrumb.js" type="module"></script>
+    <script src="../js/breadcrumb.js" type="module"></script>
   </head>
 
   <body>
     <header class="divider" id="main-head"></header>
-    <nav id="breadcrumbs" class="breadcrumb" aria-label="Breadcrumb"></nav>
     <div id="modalOverlay" class="modal-overlay hide"></div>
     <div
       id="removeDialog"
@@ -32,12 +31,12 @@
         <div id="dialog-options"></div>
       </div>
     </div>
-
+    <nav id="breadcrumbs" class="breadcrumb" aria-label="Breadcrumb"></nav>
     <main class="divider">
       <section class="products">
         <h2>My Cart</h2>
 
-        <ul class="product-list"></ul>
+        <ul class="product-list" data-category="Cart"></ul>
 
         <div class="cart-footer hide" id="cart-footer">
           <div>
