--- a/src/product_listing/index.html
+++ b/src/product_listing/index.html
@@ -10,8 +10,7 @@
     <script src="../js/breadcrumb.js" type="module"></script>
   </head>
   <body>
-    <header class="divider" id="main-head">
-    </header>
+    <header class="divider" id="main-head"></header>
     <header class="divider" id="main-head"></header>
     <header class="divider" id="main-head"></header>
     <div class="search-bar" id="mobile-search">
