--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -45,7 +45,9 @@
 
         <div class="cart-footer hide" id="cart-footer">
           <div>
-            <p class="cart-total">Total: <span id="cart-total">$0.00</span></p>
+            <p class="cart-total">
+              Subtotal: <span id="cart-total">$0.00</span>
+            </p>
             <p class="cart-discount">
               Discount: - <span id="cart-discount">$0.00</span>
             </p>
