--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -31,7 +31,7 @@
         <p id="productPrice" class="product-card__price"></p>
         <p id="productColor" class="product__color"></p>
         <p id="productDesc" class="product__description">
-          Description<br />10% Discount Price
+          Description<br />10% Discount:
         </p>
         <div class="product-detail__add">
           <button id="addToCart" data-id="productId">Add to Cart</button>
