--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -28,15 +28,19 @@
         <form method="get" action="thankyou.html">
             <div class="form-sect" id="nameplate">
                 <h3>Order Info</h3>
-                <h4>Cutomer Info</h4>
+                <h4>Cutomer Details</h4>
                 <label for="first-name">*First Name: <input type="text" name="first-name" placeholder="John" id="first-name" autocomplete="given-name" title="First, or given, name of the item recipiant." required></label><br>
                 <label for="last-name">*Last Name: <input type="text" name="last-name" placeholder="Smith" id="last-name" autocomplete="family-name" title="Last, or family, name of the item recipiant." required></label><br>
                 <h4>Billing & Delivary Address</h4>
+                <label for="first-name">*First Name: <input type="text" name="first-name" placeholder="John" id="first-name" autocomplete="given-name" title="First, or given, name of the item recipiant." required></label><br>
+                <label for="last-name">*Last Name: <input type="text" name="last-name" placeholder="Smith" id="last-name" autocomplete="family-name" title="Last, or family, name of the item recipiant." required></label><br>
                 <label for="street-add">*Street Address: <input type="text" name="street-add" placeholder="123 Oak st" id="street-add" autocomplete="address-level1" title="Name of the Street Address for delivary." required></label><br>
                 <label for="city-add">*City: <input type="text" name="city-add" placeholder="Miami" id="city-add" autocomplete="address-level2" title="Name of the city for delivary." required></label><br>
                 <label for="state-add">*State: <input type="text" name="state-add" placeholder="Missouri" id="state-add" autocomplete="address-level3" title="Name of the State for delivary." required></label><br>
                 <label for="zip-add">*Zipcode: <input type="number" name="zip-add" placeholder="12345 or 12345-6789" id="zip-add" autocomplete="postal-code" title="Zipcode for delivary." pattern="\d{5}(-\d{4})?" required></label><br>
-                <h4>Payment Info</h4>
+                <h4>Payment</h4>
+                <label for="first-name">*First Name: <input type="text" name="first-name" placeholder="John" id="first-name" autocomplete="given-name" title="First, or given, name of the item recipiant." required></label><br>
+                <label for="last-name">*Last Name: <input type="text" name="last-name" placeholder="Smith" id="last-name" autocomplete="family-name" title="Last, or family, name of the item recipiant." required></label><br>
                 <label for="credit-card">*Credit Card: <input type="text" autocomplete="cc-number" pattern="\d{13,16}" placeholder="1234 5678 9012 3456" title="Credit Card Number" id="credit-card" required></label><br>
                 <div id="cc-info">
                   <select name="exp-month" autocomplete="cc-exp-month" title="Credit Card Expiration Two-Digit Month" required>
