--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -9,6 +9,7 @@
     <title>Sleep Outside | Checkout</title>
 
     <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/form.css" />
     <script src="../js/main.js" type="module"></script>
     <script src="../js/breadcrumb.js" type="module"></script>
     <script src="../js/checkout.js" type="module"></script>
