--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -218,19 +218,26 @@
             /></label>
           </div>
         </form>
-        <br>
-        <br>
+        <br />
+        <br />
         <section class="divider"></section>
         <section class="cart-footer divider">
           <div>
-            <h3 class="cart-total" id="sub-tot">Sub-Total: $<span id="sub-value"></span></h3>
-            <h3 class="cart-total" id="tax-tot">Taxes: $<span id="tax-value"></span></h3>
-            <h3 class="cart-total" id="ship-tot">Shipping Estimate: $<span id="ship-value"></span></h3>
-            <h3 class="cart-final" id="fin-tot">Order Total: $<span id="fin-value"></span></h3>
+            <h3 class="cart-total" id="sub-tot">
+              Sub-Total: $<span id="sub-value"></span>
+            </h3>
+            <h3 class="cart-total" id="tax-tot">
+              Taxes: $<span id="tax-value"></span>
+            </h3>
+            <h3 class="cart-total" id="ship-tot">
+              Shipping Estimate: $<span id="ship-value"></span>
+            </h3>
+            <h3 class="cart-final" id="fin-tot">
+              Order Total: $<span id="fin-value"></span>
+            </h3>
           </div>
         </section>
       </section>
-      
     </main>
 
     <footer id="main-foot">&copy;NOT a real business</footer>
