align cart discount with product detail discount

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -49,7 +49,7 @@
               Subtotal: <span id="cart-total">$0.00</span>
             </p>
             <p class="cart-discount">
-              Discount: - <span id="cart-discount">$0.00</span>
+              Discount: - <span id="cart-discount">- $0.00</span>
             </p>
             <p class="cart-final">
               Final Total: <span id="cart-final">$0.00</span>
