Added "./" on anchor elements on Main Page

--- a/src/index.html
+++ b/src/index.html
@@ -35,14 +35,14 @@
       </div>
       <section id="category-icons">
         <div class="icons" id="tents">
-          <a href="product_listing/index.html?category=tents" category="tents">
+          <a href="./product_listing/index.html?category=tents" category="tents">
             <img src="./images/category-tents.svg" alt="Tents Icon" />
             <h3>Tents</h3>
           </a>
         </div>
         <div class="icons" id="backpacks">
           <a
-            href="product_listing/index.html?category=backpacks"
+            href="./product_listing/index.html?category=backpacks"
             category="backpacks"
           >
             <img src="./images/category-backpacks.svg" alt="Backpacks Icon" />
@@ -51,7 +51,7 @@
         </div>
         <div class="icons" id="sleeping-bags">
           <a
-            href="product_listing/index.html?category=sleeping-bags"
+            href="./product_listing/index.html?category=sleeping-bags"
             category="sleeping-bags"
           >
             <img
@@ -63,7 +63,7 @@
         </div>
         <div class="icons" id="hammocks">
           <a
-            href="product_listing/index.html?category=hammocks"
+            href="./product_listing/index.html?category=hammocks"
             category="hammocks"
           >
             <img src="./images/category-hammocks.svg" alt="Hammocks Icon" />
