--- a/src/index.html
+++ b/src/index.html
@@ -84,12 +84,15 @@
         <h2>🎉 Participate in Our Exclusive Giveaway! 🎉</h2>
         <p>
           Welcome to SleepOutside! We noticed this is your first time here.
-          <br><br>
-          <strong>Sign up today for a chance to win a complete camping kit!</strong>
+          <br /><br />
+          <strong
+            >Sign up today for a chance to win a complete camping kit!</strong
+          >
         </p>
-        <a href="./register_page/index.html" class="btn-register">Sign Up Now!</a>
+        <a href="./register_page/index.html" class="btn-register"
+          >Sign Up Now!</a
+        >
       </div>
     </div>
-
   </body>
 </html>
