--- a/src/register_page/index.html
+++ b/src/register_page/index.html
@@ -14,21 +14,41 @@
       <div class="form-container">
         <form id="registration-form">
           <h2>Enter the Giveaway!</h2>
-          <p>Fill in your details for a chance to win a complete camping kit.</p>
+          <p>
+            Fill in your details for a chance to win a complete camping kit.
+          </p>
 
           <div class="form-group">
             <label for="name">Full Name:</label>
-            <input type="text" id="name" name="name" placeholder="Your name here" required />
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="Your name here"
+              required
+            />
           </div>
 
           <div class="form-group">
             <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" placeholder="your.email@example.com" required />
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="your.email@example.com"
+              required
+            />
           </div>
 
           <div class="form-group">
             <label for="phone">Phone (WhatsApp):</label>
-            <input type="tel" id="phone" name="phone" placeholder="(99) 99999-9999" required />
+            <input
+              type="tel"
+              id="phone"
+              name="phone"
+              placeholder="(99) 99999-9999"
+              required
+            />
           </div>
 
           <button type="submit" class="submit-btn">Register Now</button>
