--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,10 @@
       </div>
       <section id="category-icons">
         <div class="icons" id="tents">
-          <a href="./product_listing/index.html?category=tents" category="tents">
+          <a
+            href="./product_listing/index.html?category=tents"
+            category="tents"
+          >
             <img src="./images/category-tents.svg" alt="Tents Icon" />
             <h3>Tents</h3>
           </a>
