--- a/src/checkout/success.html
+++ b/src/checkout/success.html
@@ -16,7 +16,7 @@
     </div>
     <nav id="breadcrumbs" class="breadcrumb" aria-label="Breadcrumb"></nav>
     <main class="divider">
-      <p>Thank you for your purchase! Your order was successfully processed.</p>
+      <div class='success-div'><br><h2>Thank you for your purchase!</h2><br><h3>Your order was successfully processed.</h3><br></div>
     </main>
     <footer id="main-foot"></footer>
   </body>
